--- a/src/Plugin.vcxproj.filters
+++ b/src/Plugin.vcxproj.filters
@@ -9,6 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Measure.h" />
+    <ClInclude Include="Plugin.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.gitignore" />
