--- a/src/Plugin.rc
+++ b/src/Plugin.rc
@@ -8,7 +8,7 @@
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,1,0,0
+ FILEVERSION 1,0,0,0
  PRODUCTVERSION 3,0,2,2161
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
@@ -24,8 +24,8 @@ BEGIN
     BEGIN
         BLOCK "040904E4"
         BEGIN
-            VALUE "FileVersion", "1.1.0.0"
-            VALUE "LegalCopyright", "© 2022 - deathcrafter"
+            VALUE "FileVersion", "1.0.0.0"
+            VALUE "LegalCopyright", "Â© 2022 - YOUR NAME"
 
             // Don't change the entries below!
             VALUE "ProductName", "Rainmeter"
